Fix DTOs, Mappers and Service implementation